--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,46 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+
+@font-face {
+  font-family: 'Game';
+  src: url(./assets/fonts/Gameplay.ttf);
+}
+
+
+ion-button{
+  text-transform: capitalize;
+}
+
+
+@-webkit-keyframes float {
+    0% {
+      transform: translatey(0px);
+    }
+  
+    50% {
+      transform: translatey(-10px);
+    }
+  
+    100% {
+      transform: translatey(0px);
+    }
+  }
+  
+  @keyframes float {
+    0% {
+      transform: translatey(0px);
+    }
+  
+    50% {
+      transform: translatey(-10px);
+    }
+  
+    100% {
+      transform: translatey(0px);
+    }
+  }
+
+
+ 
